css for img and li items

--- a/src/theme/styles/topicwrapper.scss
+++ b/src/theme/styles/topicwrapper.scss
@@ -21,6 +21,9 @@ a.dc-topic-wrapper {
   letter-spacing: .25px;
   margin: .5em 0;
   padding-bottom: .75em;
+  li {
+    display: inline;
+  }
   a,
   div {
     color: $primary;
