--- a/src/theme/styles/blocks.scss
+++ b/src/theme/styles/blocks.scss
@@ -34,7 +34,7 @@
     h2 {
         padding-bottom: 1.6rem;
         img {
-            margin: 2rem 0;
+            margin-bottom: 2rem;
         }
     }
     .basic-block {
