--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -2,12 +2,14 @@ $theme-font-path: "~uswds/dist/fonts";
 $theme-image-path: "~uswds/dist/img";
 @import "~uswds/dist/scss/uswds";
 
-@import "~@civicactions/data-catalog-components/dist/scss/index";
+// @import "~@civicactions/data-catalog-components/dist/scss/index";
 
 
 // Fonts and General css.
 // @import "./fonts/rubik-cufonfonts-webfont/style.css";
 // @import "./styles/general.scss";
+
+@import "./styles/typography.scss";
 
 // // Component styles.
 // @import "./styles/filedownload.scss";
