Adding some USWDS color variables and including them with USWDS mixins.

--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -1,4 +1,10 @@
-// Colors.
+// USWDS colors
+$theme-color-base-lightest:  "gray-1";
+$theme-color-base-lighter:   "gray-2";
+$theme-color-primary:        "blue-50";
+$theme-color-base-darker:    "gray-70";
+
+// Legacy Colors
 $backgroundColor:   #f9fafb;
 $borderColor:       #e8ebf0;
 $borderRadius:      4px;
