--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -2,8 +2,9 @@ $theme-font-path: "~uswds/dist/fonts";
 $theme-image-path: "~uswds/dist/img";
 @import "~uswds/dist/scss/uswds";
 
-@import "~@civicactions/data-catalog-components/dist/scss/index";
+// @import "~@civicactions/data-catalog-components/dist/scss/index";
 
+ @import "./styles/colors.scss";
 
 // Fonts and General css.
 // @import "./fonts/rubik-cufonfonts-webfont/style.css";
