Adding typography defaults from USWDS.

--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -4,7 +4,8 @@ $theme-image-path: "~uswds/dist/img";
 
 // @import "~@civicactions/data-catalog-components/dist/scss/index";
 
- @import "./styles/colors.scss";
+@import "./styles/colors.scss";
+@import "./styles/typography.scss";
 
 // Fonts and General css.
 // @import "./fonts/rubik-cufonfonts-webfont/style.css";
