More updates to demo site

--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -5,6 +5,8 @@
 // @import "./fonts/rubik-cufonfonts-webfont/style.css";
 // @import "./styles/general.scss";
 
+@import "./styles/spinner"
+
 // // Component styles.
 // @import "./styles/filedownload.scss";
 // @import "./styles/iconlist.scss";
