--- a/src/theme/styles/dataset.scss
+++ b/src/theme/styles/dataset.scss
@@ -1,5 +1,17 @@
-.dc-dataset-page {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin: 25px auto;
+// .dc-dataset-page {
+//     padding-top: 25px;
+//     padding-bottom: 25px;
+//     margin: 25px auto;
+// }
+.dkan-dataset-topic-list {
+  display: flex;
+  li {
+    display: flex;
+    align-items: center;
+    padding: 5px 20px 5px 0;
+  }
+  svg {
+    margin-right: 6px;
+    fill: $linkColor;
+  }
 }
