--- a/src/theme/styles/general.scss
+++ b/src/theme/styles/general.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   background-color: $backgroundColor;
+  background-image: none;
   color: $textColor;
   font-family: $fontText;
   font-size: 1.6rem;
