--- a/src/theme/styles/general.scss
+++ b/src/theme/styles/general.scss
@@ -29,9 +29,9 @@ body {
     font-family: $fontHeading;
     font-weight: 700;
   }
-  h1 { font-size: 3.0rem }  // 30px
-  h2 { font-size: 2.4rem; } // 24px
-  h3 { font-size: 2.0rem; } // 20px
+  h1 { font-size: 2.0rem }
+  h2 { font-size: 1.7rem; }
+  h3 { font-size: 1.3rem; }
 
   table {
     background-color: white;
