--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -44,7 +44,6 @@ body .table-bordered th {
   border-color: #e8ebf0;
 }
 body .form-control {
-  font-size: 1.6rem;
   margin-bottom: 15px;
 }
 
@@ -281,7 +280,6 @@ dc-menu .dc-menu-item {
 }
 .dc-datatable-header .dc-page-size-options select {
   display: inline-block;
-  max-width: 80px;
   width: auto;
   height: 32px;
   border: 1px solid #dddddd;
@@ -350,10 +348,10 @@ dc-menu .dc-menu-item {
     width: 100%;
   }
 }
-.dc-search-input.form-group {
+.dc-search-input {
   display: flex;
 }
-.dc-search-input.form-group input[type=text] {
+.dc-search-input input[type=text] {
   padding: 1rem 1.5rem;
   font-size: 1.8rem;
   height: auto;
@@ -363,7 +361,7 @@ dc-menu .dc-menu-item {
   background-color: white;
   position: relative;
 }
-.dc-search-input.form-group button {
+.dc-search-input button {
   background-color: #FFD666;
   border-radius: 4px;
   border-style: none;
@@ -377,19 +375,19 @@ dc-menu .dc-menu-item {
   color: #162e51;
   width: 100px;
 }
-.dc-search-input.form-group button svg {
+.dc-search-input button svg {
   margin-right: 5px;
   vertical-align: middle;
 }
-.dc-search-input.form-group button svg path {
+.dc-search-input button svg path {
   fill: #162e51;
 }
-.dc-search-input.form-group button:hover {
+.dc-search-input button:hover {
   background-color: #EAC200;
 }
 
 @media screen and (max-width: 768px) {
-  .dc-search-input.form-group {
+  .dc-search-input {
     position: relative;
     top: auto;
     right: auto;
@@ -397,7 +395,7 @@ dc-menu .dc-menu-item {
     border-left: none;
     padding-left: 0;
   }
-  .dc-search-input.form-group input.form-control {
+  .dc-search-input input.form-control {
     width: 100%;
   }
 }
@@ -669,7 +667,7 @@ a.dc-topic-wrapper:focus svg, a.dc-topic-wrapper:hover svg {
 }
 .dc-header .dc-site-name a {
   color: #162e51;
-  font-size: 1.8rem;
+  font-size: 1.15rem;
 }
 .dc-header .dc-slogan {
   margin-top: 10px;
@@ -790,14 +788,16 @@ a.dc-topic-wrapper:focus svg, a.dc-topic-wrapper:hover svg {
 .dc-footer .branding p {
   margin: 0 2em 1em 0;
 }
+.dc-footer .branding p:last-child {
+  line-height: 2rem;
+}
 .dc-footer .branding .social {
-  margin: 1em 0 0 0;
+  margin: 1em 0 0 1em;
 }
 .dc-footer .branding .social svg {
   font-size: 25px;
   fill: #FFFFFF;
   opacity: 0.5;
-  margin: 0 1em 1em 0;
 }
 .dc-footer .branding .social svg:hover {
   opacity: 1;
