--- a/src/theme/styles/resource.scss
+++ b/src/theme/styles/resource.scss
@@ -9,10 +9,12 @@
   align-items: baseline;
   justify-content: space-between;
   margin-bottom: 16px;
+  font-size: 1.4rem;
   .dc-page-size-options {
     label {
       display: inline-block;
       margin: 0 5px 0 0;
+      font-size: 1.4rem;
     }
     select {
       display: inline-block;
