--- a/src/theme/styles/searchlistitem.scss
+++ b/src/theme/styles/searchlistitem.scss
@@ -45,6 +45,7 @@
     border-radius: 3px;
     color: white;
     background: $dataIcon;
+    font-size: 1.4rem;
     line-height: 1.6rem;
     white-space: nowrap;
     display: inline-block;
