--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -1,49 +1,52 @@
 @import "./fonts/rubik-cufonfonts-webfont/style.css";
 html {
   /*Convert font size to base 10 for easier calculations (1rem = 10px)*/
+  font-size: 62.5%;
 }
 html body {
   background-image: none;
 }
 
-body {
+html body {
   background-color: #f9fafb;
   background-image: none;
   color: #3B3B3B;
-  font-family: "Rubik Regular", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Rubik Regular", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-size: 1.6rem !important;
 }
-body a, body input, body button, body textarea {
+html body a, html body input, html body button, html body textarea {
   transition: all 0.2s linear;
 }
-body a {
+html body a {
   color: #0978bc;
   word-break: break-word;
 }
-body a:hover, body a:focus {
+html body a:hover, html body a:focus {
   color: #162e51;
 }
-body h1, body h2, body h3, body h4, body h5 {
+html body h1, html body h2, html body h3, html body h4, html body h5 {
   color: #162e51;
   font-family: "Rubik Bold", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
-body h1 {
+html body h1 {
+  font-size: 3rem;
+}
+html body h2 {
+  font-size: 2.4rem;
+}
+html body h3 {
   font-size: 2rem;
 }
-body h2 {
-  font-size: 1.7rem;
-}
-body h3 {
-  font-size: 1.3rem;
-}
-body table {
+html body table {
   background-color: white;
 }
-body .table-bordered td,
-body .table-bordered th {
+html body .table-bordered td,
+html body .table-bordered th {
   border-color: #e8ebf0;
 }
-body .form-control {
+html body .form-control {
+  font-size: 1.6rem;
   margin-bottom: 15px;
 }
 
@@ -273,10 +276,12 @@ dc-menu .dc-menu-item {
   align-items: baseline;
   justify-content: space-between;
   margin-bottom: 16px;
+  font-size: 1.4rem;
 }
 .dc-datatable-header .dc-page-size-options label {
   display: inline-block;
   margin: 0 5px 0 0;
+  font-size: 1.4rem;
 }
 .dc-datatable-header .dc-page-size-options select {
   display: inline-block;
@@ -445,6 +450,7 @@ dc-menu .dc-menu-item {
   border-radius: 3px;
   color: white;
   background: #666666;
+  font-size: 1.4rem;
   line-height: 1.6rem;
   white-space: nowrap;
   display: inline-block;
@@ -558,6 +564,7 @@ dc-menu .dc-menu-item {
 .dc-table tr td, .dc-table tr th {
   border: 1px solid #e8ebf0;
   padding: 0.5rem;
+  font-size: 1.4rem;
 }
 .dc-table tr th {
   background: #162e51;
@@ -667,7 +674,7 @@ a.dc-topic-wrapper:focus svg, a.dc-topic-wrapper:hover svg {
 }
 .dc-header .dc-site-name a {
   color: #162e51;
-  font-size: 1.15rem;
+  font-size: 1.8rem;
 }
 .dc-header .dc-slogan {
   margin-top: 10px;
@@ -720,7 +727,6 @@ a.dc-topic-wrapper:focus svg, a.dc-topic-wrapper:hover svg {
 }
 .dc-hero .dc-hero-search input {
   margin-right: 1em;
-  width: 80%;
 }
 .dc-hero .dc-hero-search button {
   border: none;
