--- a/src/theme/styles/table.scss
+++ b/src/theme/styles/table.scss
@@ -15,6 +15,7 @@
     tr td, tr th {
         border: 1px solid $borderColor;
         padding: .5rem;
+        font-size: 1.4rem;
     }
     tr th {
         background: $primaryDark;
