--- a/src/theme/styles/searchsidebar.scss
+++ b/src/theme/styles/searchsidebar.scss
@@ -6,9 +6,19 @@
   border-radius: $borderRadius;
   padding: 30px;
   margin-bottom: 25px;
-  select {
-    border-color: $borderColor;
-    border-radius: $borderRadius;
+
+  #dc-search-list-sort {
+    button {
+    width: 100%;
+    text-align: left;
+      span {
+        width: calc(100% - 1rem);
+        display: inline-block;
+      }
+    }
+    .dropdown-menu {
+      width: 100%;
+    }
   }
   .toggle-block {
     margin-top: 0;
