--- a/src/theme/styles/searchsidebar.scss
+++ b/src/theme/styles/searchsidebar.scss
@@ -14,6 +14,7 @@
       span {
         width: calc(100% - 1rem);
         display: inline-block;
+        font-size: 1.6rem;
       }
     }
     .dropdown-menu {
