Install react-query (#134)
* Install react-query and migrate search page

* Migrate API calls to react-query

* Update loading spinner

* Pull in alpha of data-catalog-components

* Fix cypress tests

* Adjust a style

* Bump to alpha 3

* Bump components version

--- a/src/theme/styles/searchsidebar.scss
+++ b/src/theme/styles/searchsidebar.scss
@@ -6,9 +6,20 @@
   border-radius: $borderRadius;
   padding: 30px;
   margin-bottom: 25px;
-  select {
-    border-color: $borderColor;
-    border-radius: $borderRadius;
+
+  #dc-search-list-sort {
+    button {
+    width: 100%;
+    text-align: left;
+      span {
+        width: calc(100% - 1rem);
+        display: inline-block;
+        font-size: 1.6rem;
+      }
+    }
+    .dropdown-menu {
+      width: 100%;
+    }
   }
   .toggle-block {
     margin-top: 0;
